--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -99,21 +99,16 @@ jobs:
       - name: Login to Azure Container Registry
         run: az acr login --name sit722devop   # ✅ registry name only
 
-      - name: Debug repo contents
-        run: ls -R backend
-
       - name: Build and Push Product Service Image
         run: |
-          docker buildx build \
-            -f backend/product_service/Dockerfile \
+          docker buildx build -f backend/product_service/Dockerfile \
             -t ${{ env.ACR_LOGIN_SERVER }}/product_service:latest \
             backend/product_service --load
           docker push ${{ env.ACR_LOGIN_SERVER }}/product_service:latest
 
       - name: Build and Push Order Service Image
         run: |
-          docker buildx build \
-            -f backend/order_service/Dockerfile \
+          docker buildx build -f backend/order_service/Dockerfile \
             -t ${{ env.ACR_LOGIN_SERVER }}/order_service:latest \
             backend/order_service --load
           docker push ${{ env.ACR_LOGIN_SERVER }}/order_service:latest
